# scanpy

./: .azure-pipelines.yml  .codecov.yaml  .codecov.yml  .coveragerc  .cruft.json  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pip-2033.txt  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .taplo.toml  .travis.yml  .travis_install.sh  =0.6  CONTRIBUTING.md  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  README.rst  Untitled.ipynb  _rank_genes_groups.py  _top_genes.py  benchmark_runner_and_visualizer.py  biome.jsonc  configurable_normalization_benchmark.csv  conftest.py  contributing.md  convert-ico.sh  hatch.toml  index.html  optimized_hvg_implementation.py  pyproject.toml  pytest.ini  requirements.txt  requires.txt  (+9 more)
.codeboarding/: AnnData_Data_Model.md  Core_Analysis_Pipeline.md  Data_Management_Access.md  on_boarding.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  bug_report.yml  config.yml  enhancement-request.md  enhancement-request.yml  feature_request.yml  question.md
.github/workflows/: benchmark.yml  build.yaml  check-pr.yml  ci.yml  publish.yml  release.yaml  test.yaml
benchmarks/: README.md  asv.conf.json  configurable_normalization_benchmark.csv  normalization_benchmark.py  sparse_pca_benchmark.py
benchmarks/benchmarks/: __init__.py  _utils.py  preprocessing.py  preprocessing_counts.py  preprocessing_counts_dask.py  preprocessing_log.py  readwrite.py  tools.py  utils.py
ci/: constraints.txt
ci/scripts/: low-vers.py  min-deps.py  min-vers.py  run-min-deps.sh  towncrier_automation.py
docs/: Makefile  _key_contributors.rst  _links.rst  _tutorials.md  abstract.rst  api.md  api.rst  basic_usage.md  basic_usage.rst  community.md  community.rst  conf.py  contributing.md  contributors.md  contributors.rst  docutils.conf  ecosystem.md  ecosystem.rst  examples.rst  external.md  external.rst  getting_started.rst  index.md  index.rst  installation.md  installation.rst  key_contributors.rst  news.md  news.rst  references.bib  references.rst  release-latest.rst  release-notes.rst  release_notes.rst  requirements.txt  requires.txt  tutorials.md  tutorials.rst  usage-principles.md  usage-principles.rst  (+1 more)
docs/_static/: custom.css
docs/api/: classes.md  datasets.md  deprecated.md  experimental.md  get.md  index.md  index.rst  io.md  metrics.md  plotting.md  plotting.rst  preprocessing.md  queries.md  reading.md  scanpy.api.AnnData.rst  scanpy.api.rst  scanpy.external.rst  scanpy.plotting.rst  settings.md  tools.md
docs/dev/: ci.md  ci.rst  code.md  code.rst  documentation.md  documentation.rst  external-tools.md  external-tools.rst  getting-set-up.md  getting-set-up.rst  git.rst  index.md  index.rst  release.md  release.rst  testing.md  testing.rst  versioning.md  versioning.rst
docs/extensions/: array_support.py  autosummary_skip_deprecated.py  autosummary_skip_inherited.py  canonical_tutorial.py  cite.py  debug_docstrings.py  function_images.py  git_ref.py  github_links.py  has_attr_test.py  myst_ignore_mime_types.py  param_police.py  patch_myst_nb.py  returns_prose_wrap.py  settings_singleton.py  typed_returns.py
docs/how-to/: cell-cycle.ipynb  index.md  knn-transformers.ipynb  plotting-with-marsilea.ipynb
docs/release-notes/: 0.1.0.md  0.1.0.rst  0.13.0rc1.md  0.2.1.md  0.2.1.rst  0.2.9.md  0.2.9.rst  0.3.0.md  0.3.0.rst  0.3.2.md  0.3.2.rst  0.4.0.md  0.4.0.rst  0.4.2.md  0.4.2.rst  0.4.3.md  0.4.3.rst  0.4.4.md  0.9.4.md  1.0.0.md  1.0.0.rst  1.1.0.md  1.1.0.rst  1.10.0.md  1.10.1.md  1.10.2.md  1.10.3.md  1.10.4.md  1.10.5.md  1.10.6.md  1.11.0.md  1.11.0rc1.md  1.11.0rc2.md  1.11.1.md  1.11.2.md  1.11.3.md  1.11.4.md  1.11.5.md  1.12.0.md  1.12.0rc1.md  (+241 more)
docs/tutorials/: index.md
examples/: README.md  krumsiek11.ipynb  moignard15.ipynb  myexample.ipynb  paul15.ipynb  toggleswitch.ipynb
logo/: Scanpy_Logo_CMYK.eps
own_changes_old/: #anndata.py#
scanpy/: __init__.py  __main__.py  _compat.py  _docs.py  _exporting.py  _metadata.py  _settings.py  _utils.py  _version.py  ann_data.py  api.py  cli.py  exporting.py  get.py  graph.py  logging.py  plotting.py  readwrite.py  settings.py  utils.py
scanpy/_utils/: __init__.py  _dask.py
scanpy/api/: __init__.py  datasets.py  export_to.py  logging.py  pl.py  plotting.py  pp.py  preprocessing.py  queries.py  settings.py  tl.py  tools.py
scanpy/classes/: ann_data.py  data_graph.py
scanpy/compat/: matplotlib.py  urllib_request.py
scanpy/cython/: utils_cy.c  utils_cy.pyx  utils_py.py
scanpy/data_structs/: __init__.py  ann_data.py  data_graph.py
scanpy/datasets/: 10x_pbmc68k_reduced.h5ad  __init__.py  _datasets.py  _ebi_expression_atlas.py  _expression_atlas.py  _utils.py  api_without_datasets.py  api_without_examples.py  builtin.py
scanpy/examples/: __init__.py  api_without_examples.py  builtin.py  krumsiek11.txt  scanpy_user_template.py
scanpy/experimental/: __init.py__  __init__.py  _docs.py
scanpy/exs/: __init__.py  builtin.py  builtin_alex.py  user.py  user_exs_template.py
scoop/: pli.py  scanpy.py
scripts/: RData_to_other_formats.R  README.md  diffmap.py  download_and_test.py  generate_example_figs.sh  scanpy.py  test.sh
sim/: krumsiek11_oparams.txt  toggleswitch_oparams.txt
tests/: README.md  conftest.py  generate_example_figs.sh  readme_figs.sh  test.sh  test_aggregated.py  test_backed.py  test_backends.py  test_binary.py  test_cluster_resolution.py  test_cluster_tree.py  test_clustering.py  test_combat.py  test_datasets.py  test_dendrogram.py  test_dendrogram_key_added.py  test_deprecations.py  test_download.py  test_embedding.py  test_embedding_density.py  test_embedding_plots.py  test_filter_rank_genes_groups.py  test_get.py  test_harmony.py  test_helpers.py  test_highly_variable_genes.py  test_ingest.py  test_logging.py  test_metrics.py  test_neighbors.py  test_neighbors_common.py  test_neighbors_key_added.py  test_normalization.py  test_normalization_optimization.py  test_package_structure.py  test_paga.py  test_pca.py  test_performance.py  test_plotting.py  test_plotting_spatial.py  (+16 more)
(+644 files in other folders)
